--- a/LaTex/BachelorThesis/arbeit-vorlage.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage.tex
@@ -307,7 +307,93 @@ v_{k.l} =
 
 \textbf{Beweis:}
 
+Wir wollen zunächst die $\mat{A}_{i} \in \mathbb{R}^{N \times N}$ von $\mat{A} \in \mathbb{R}^{n \times n}$ genauer Betrachten.\\
+Behauptung: Für eine Matrix $\mat{B} \in \mathbb{R}^{N \times N}$ mit
+\begin{equation}
+\mat{B} = 
+\begin{pmatrix}
+a & b\\
+c & a & b\\
+  & \ddots & \ddots & \ddots\\
+  &		   & c & a & b\\
+  &		   &  & c & a
+\end{pmatrix}
+\end{equation}
 
+gilt für die Eigenwerte $\lambda_{k} := a + 2b\left(\frac{c}{b}\right)^{\frac{1}{2}} \cos(\theta_{k})$ und die Eigenvektoren $v_{k_{i}} := \left(\frac{c}{b}\right)^{\frac{i}{2}} \sin(i \theta_{k})$ für alle $1 \le i \le N$, $\lambda_{k} \in \mathbb{R}, v_{k} \in \mathbb{R}^{N \times N}$.
+
+\textit{Beweis:}
+
+Da $\lambda_{k}, v_{k}$ Eigenwerte bzw. Eigenvektoren von $\mat{B}$ sind gilt folgende Gleichung:
+\begin{equation}
+(\mat{B} - \lambda_{k} \mat{Id}) v_{k} = 0
+\end{equation}
+
+\begin{equation}
+\Longleftrightarrow
+\begin{pmatrix}
+a - \lambda_{k} & b\\
+c & a - \lambda_{k} & b\\
+  & \ddots & \ddots & \ddots\\
+  &		   & c & a - \lambda_{k} & b\\
+  &		   &  & c & a - \lambda_{k}
+\end{pmatrix}
+v_{k} = 0
+\end{equation}
+
+\begin{equation}
+\Longleftrightarrow
+\begin{pmatrix}
+(a - \lambda_{k}) v_{k_{1}} + b v_{k_{2}}\\
+c v_{k_{1}} + (a - \lambda_{k}) v_{k_{2}} + b v_{k_{3}}\\
+\vdots\\
+c v_{k_{N-2}} + (a - \lambda_{k}) v_{k_{N-1}} + b v_{k_{N}}\\
+c v_{k_{N-1}} + (a - \lambda_{k}) v_{k_{N}}
+\end{pmatrix}
+= 0
+\end{equation}
+
+Wir wollen zunächst die einzelnen Summanden ausrechnen bzw. vereinfachen:
+
+\begin{description}
+\item[1.] Löse $(a - \lambda_{k}) v_{k_{i}}$
+\begin{eqnarray}
+(a - \lambda_{k}) v_{k_{i}} &=& (a - (a + 2b\left(\frac{c}{b}\right)^{\frac{1}{2}} \cos(\theta_{k}))) \left(\frac{c}{b}\right)^{\frac{i}{2}} \sin(i \theta_{k})\notag \\
+&=& -2b\left(\frac{c}{b}\right)^{\frac{i+1}{2}} \cos(\theta_{k})\sin(i \theta_{k}) \notag
+\end{eqnarray}
+\item[2.] Löse $b v_{k_{i+1}}$
+\begin{eqnarray}
+b v_{k_{i+1}} &=& b \left(\frac{c}{b}\right)^{\frac{i+1}{2}} \sin((i+1) \theta_{k})\notag \\
+&=& b \left(\frac{c}{b}\right)^{\frac{i+1}{2}} (\cos(\theta_{k}) \sin(i \theta_{k}) + \cos(i \theta_{k}) \sin(\theta_{k})) \notag
+\end{eqnarray}
+\item[3.] Löse $c v_{k_{i-1}}$
+\begin{eqnarray}
+c v_{k_{i-1}} &=& c \left(\frac{c}{b}\right)^{\frac{i-1}{2}} \sin((i-1) \theta_{k}) = \left(c^{2}\frac{c}{b}\right)^{\frac{i-1}{2}} \sin((i-1) \theta_{k})\notag \\
+&=& \left(\frac{1}{b^{-2}} \frac{c}{b}\right)^{\frac{i+1}{2}} \sin((i-1) \theta_{k}) = b \left(\frac{c}{b}\right)^{\frac{i+1}{2}} \sin((i-1) \theta_{k}) \notag \\
+&=& b \left(\frac{c}{b}\right)^{\frac{i+1}{2}} (\cos(\theta_{k}) \sin(i \theta_{k}) - \cos(i \theta_{k}) \sin(\theta_{k})) \notag
+\end{eqnarray}
+\end{description}
+
+Nun rechnen wir jede Zeile unseres Vektors aus:
+
+\begin{description}
+\item[1.] Zeile $1$, also $i = 1$
+\begin{eqnarray}
+&&-2b\left(\frac{c}{b}\right)^{\frac{1+1}{2}} \cos(\theta_{k})\sin(\theta_{k}) + b \left(\frac{c}{b}\right)^{\frac{1+1}{2}} (\cos(\theta_{k}) \sin(\theta_{k}) + \cos(\theta_{k}) \sin(\theta_{k})) \notag \\
+&=& c (-2\cos(\theta_{k})\sin(\theta_{k}) + 2\cos(\theta_{k})\sin(\theta_{k})) = 0. \notag
+\end{eqnarray}
+\item[2.] Zeile $2,..,N-1$, betrachte für alle $2 \le i \le N-1$
+\begin{eqnarray}
+
+\end{eqnarray}
+\item[3.] Zeile $N$, somit für $i = N$
+\begin{eqnarray}
+&&b \left(\frac{c}{b}\right)^{\frac{N+1}{2}} (\cos(\theta_{k}) \sin(N \theta_{k}) - \cos(N \theta_{k}) \sin(\theta_{k})) - 2b\left(\frac{c}{b}\right)^{\frac{N+1}{2}} \cos(\theta_{k})\sin(N \theta_{k}) \notag \\
+&=& b \left(\frac{c}{b}\right)^{\frac{N+1}{2}}(-2\cos(\theta_{k})\sin(N\theta_{k}) + \cos(\theta_{k})\sin(N\theta_{k}) - \cos(N\theta_{k})\sin(\theta_{k})) \notag \\
+&=& -b \left(\frac{c}{b}\right)^{\frac{N+1}{2}}(\cos(\theta_{k})\sin(N\theta_{k}) + \cos(N\theta_{k})\sin(\theta_{k})). \notag \\
+&=& -b \left(\frac{c}{b}\right)^{\frac{N+1}{2}} \sin((N+1)\theta_{k}) \overset{h = \frac{1}{N+1}}{=} -b \left(\frac{c}{b}\right)^{\frac{N+1}{2}} \sin(k\pi) = 0. \notag
+\end{eqnarray}
+\end{description}
 
 \textbf{Beispiel:}
 
